2004-03-30  Lluis Sanchez Gual <lluis@ximian.com>

	* CaseInsensitiveHashCodeProvider.cs: Added support for CultureInfo.
	  Implemented property DefaultInvariant.

2004-03-29  Lluis Sanchez Gual <lluis@ximian.com>

	* CollectionBase.cs: Renamed internal arraylist member to match MS.NET
	  (to allow serialization interoperability).

2004-03-18  David Sheldon <dave-mono@earth.li>

  * Hashtable.cs: Serialise/Deserialise to two arrays of 
   keys/values. This will match what MS.NET appears to be
   doing.

2004-02-12  Jackson Harper  <jackson@ximian.com>

	* SortedList.cs: Only .et 1.0 sets the capacity to a min of
	initial size.
	
2004-01-13  Lluis Sanchez Gual <lluis@ximian.com>

	* Hashtable.cs: Added serialization support to SynchedHashtable. This
	fixes bug #52741.

2004-01-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Hashtable.cs: fix Clone. Closes bug #52740. Patch by Benjamin Jemlich
	(pcgod@gmx.net).

2003-12-26 Ben Maurer  <bmaurer@users.sourceforge.net>

	* ArrayList.cs: Add class `SimpleEnumerator' this handles the
	.GetEnumerator We are able to remove fields by doing this, the
	sizeof the simple version is 75% of that of the complex one, so we
	get a pretty nice saving.

2003-12-23  Lluis Sanchez Gual <lluis@ximian.com>

	* ArrayList.cs: Renamed private fields m_Count, m_Data and
	m_StateChanges to _size, _items and _version, to make it compatible with
	MS.NET (needed for remoting interoperability). This fixes bug #52438.

2003-12-01  Dick Porter  <dick@ximian.com>

	* CaseInsensitiveComparer.cs: Construct the default comparers when
	they're needed, to avoid a dependency loop with CultureInfo's
	constructor.

2003-12-01  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Queue.cs: patch from Carlos Barcenilla.
	public class Queue
		- method: ICollection.Clone()
		- Optimized. Removed unneeded instructions.
		- method: public static Queue Synchronized (Queue queue)
		- ArgumentNullException.ParamName must be "queue", not null.