@@ -8,6 +8,8 @@
 
 using System;
 using System.Collections;
+using System.Globalization;
+using System.Threading;
 
 
 namespace System.Collections {
@@ -17,15 +19,22 @@ namespace System.Collections {
 
 		public static readonly Comparer Default;
 
+#if NET_1_1
+		public static readonly Comparer DefaultInvariant;
+#endif
+
+		CultureInfo _culture;
 
 		// Class constructor
 
 		static Comparer ()
 		{
 			Default = new Comparer ();
+#if NET_1_1
+			DefaultInvariant = new Comparer (CultureInfo.InvariantCulture);
+#endif
 		}
-
-
+		
 
 		// Public instance constructor
 
@@ -33,6 +42,12 @@ namespace System.Collections {
 		{
 		}
 
+#if NET_1_1
+		private Comparer (CultureInfo culture)
+		{
+			_culture = culture;
+		}
+#endif
 
 
 		// IComparer
@@ -45,6 +60,12 @@ namespace System.Collections {
 				return -1;
 			else if (b == null)
 				return 1;
+			else if (a is string && b is string) {
+				if (_culture != null)
+					return _culture.CompareInfo.Compare ((string)a, (string)b);
+				else
+					return Thread.CurrentThread.CurrentCulture.CompareInfo.Compare ((string)a, (string)b);
+			}
 			else if (a is IComparable)
 				return (a as IComparable).CompareTo (b);
 			else if (b is IComparable)
